@@ -9,9 +9,13 @@ VERSION_MAJOR="1"
 VERSION_MINOR="4"
 VERSION_PATCH="0"
 VERSION_EXTRA="SVN"
-VERSION_BUILD="155"
+VERSION_BUILD="156"
 
 # $Log$
+#
+# BUILD : 1.4.0.156 (SVN)
+# BUGS  : N/A
+# NOTES : Fixed wrong wrong ping value stored for juped servers.
 #
 # BUILD : 1.4.0.155 (SVN)
 # BUGS  : 461
